--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bitacora personal Diego Torres</title>
+    <title>Bitácora Diego Torres</title>
 </head>
 <body>
-    <h1>Bitacora Diego Torres</h1>
+    <h1>Bitácora Diego Torres</h1>
 </body>
 </html>
