nuevas imagenes y mas
imagenes, centrado, estilo

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bitácora Diego Torres</title>
+    <link rel="stylesheet" href="css/style.css" media="screen"
 </head>
 <body>
-    <h1>Bitácora Diego Torres</h1>
+   <center><h1>Bitácora Diego Torres</h1></center>
+   <center><img src="img/ovejas1.jpg" alt="Rebaño de ovejas" 
+    Width=400px /></center>  
 </body>
 </html>
