--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bitácora Diego Torres</title>
     <link rel="stylesheet" href="css/style.css" media="screen"
+
 </head>
 <body>
    <center><h1>Bitácora Diego Torres</h1></center>
-   <center><img src="img/ovejas1.jpg" alt="Rebaño de ovejas" 
-    Width=400px /></center>  
-</body>
+   <br>
+   <center><p1>Mi nombre es Diego Torres, en esta bitácora encontraras parte de mi colección fotografica personal.... </p1></center>
+    <br>
+   <center><img src="img/ave2.jpg" alt="Gorrion colores" 
+      Width=400px /></center>  
+
+    </body>
 </html>
