--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
     <section class="contenedor Sobre-nosotros" >
     <h2 class="titulo">De qué trata</h2>
      <div class="contenedor-sobre-nosotros">
-       <img src="img/MQUC2.jpg" alt=""> 
+       <img src="img/MQUC.PNG" alt=""> 
        <div class="contenido-textos">
-         <h3><span>1</span>Más que una colección</h3>
-         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla iusto facere nobis magnam nisi, voluptatem impedit et, repellat deleniti corporis dolores recusandae numquam modi atque assumenda accusamus, laudantium molestiae repellendus.</p>
-         <h3><span>2</span>Más que una colección</h3>
+         <h3>Más que una colección</h3>
          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla iusto facere nobis magnam nisi, voluptatem impedit et, repellat deleniti corporis dolores recusandae numquam modi atque assumenda accusamus, laudantium molestiae repellendus.</p>
        </div>
      </div>
@@ -39,31 +37,31 @@
           <h2 class="titulo">Camisetas</h2>
           <div class="galeria-camisetas">
             <div class="imagen-camisetas">
-              <img src="img/local.jpg" alt="">
+              <img src="img/Local.jpeg" alt="">
               <div class="hover-galeria">
-                <img src="img/MQUC.jpg" alt="">
-                <p>Visitar</p>
+                <img src="img/flecha.png" alt="">
+                <p>Camisetas Local</p>
               </div>
             </div>
             <div class="imagen-camisetas">
-              <img src="img/visita.jpg" alt="">
+              <img src="img/Visita.jpeg" alt="">
               <div class="hover-galeria">
-                <img src="img/MQUC.jpg" alt="">
-                <p>Visitar</p>
+                <img src="img/flecha.png" alt="">
+                <p>Camisetas Visita</p>
               </div>
             </div>
             <div class="imagen-camisetas">
-              <img src="img/arquero.jpg" alt="">
+              <img src="img/Arquero.jpeg" alt="">
               <div class="hover-galeria">
-                <img src="img/MQUC.jpg" alt="">
-                <p>Visitar</p>
+                <img src="img/flecha.png" alt="">
+                <p>Camisetas Arquero</p>
               </div>
             </div>
             <div class="imagen-camisetas">
-              <img src="img/Especial.jpg" alt="">
+              <img src="img/Especial.jpeg" alt="">
               <div class="hover-galeria">
-                <img src="img/MQUC.jpg" alt="">
-                <p>Visitar</p>
+                <img src="img/flecha.png" alt="">
+                <p>Camisetas Especiales</p>
               </div>
             </div>  
           </div>
@@ -73,7 +71,7 @@
       <h2 class="titulo">Creador</h2> 
       <div class="cards">
         <div class="card">
-          <img src="img/MQUC2.jpg" alt=""> 
+          <img src="img/Diego.jpg" alt=""> 
           <div clas="contenido-texto-card">
            <h4>Diego Torres</h4> 
            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, repellat!</p> 
