--- a/index.html
+++ b/index.html
@@ -5,76 +5,72 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Más que una colección</title>
-  <link rel="shortcut icon" href="img/MQUC2.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="img/MQUC.PNG" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
       <nav>
         <a href="#">Inicio</a>
-        <a href="#">Acerca de</a>
+        <a href="#">Camisetas</a>
         <a href="#">Contacto</a>
       </nav>
       <section class="textos-header">
-        <h1>Más que una coleccion</h1>    
+        <h1>Más que una colección</h1>    
         <h2>Club Universidad de Chile</h2>
       </section>
       <div Class="wave" style=height:150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.20,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div> 
   </header>
   <main>
     <section class="contenedor Sobre-nosotros" >
-    <h2 class="titulo">De qué trata</h2>
-     <div class="contenedor-sobre-nosotros">
-       <img src="img/MQUC.PNG" alt=""> 
+     <div class="contenedor-sobre-nosotros"> 
        <div class="contenido-textos">
-         <h3>Más que una colección</h3>
+         <h2 class="titulo">De que trata</h2>
          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla iusto facere nobis magnam nisi, voluptatem impedit et, repellat deleniti corporis dolores recusandae numquam modi atque assumenda accusamus, laudantium molestiae repellendus.</p>
        </div>
      </div>
     </section>
-    <section class="Camisetas">
-       <div class="contenedor">
-          <h2 class="titulo">Camisetas</h2>
-          <div class="galeria-camisetas">
-            <div class="imagen-camisetas">
-              <img src="img/Local.jpeg" alt="">
-              <div class="hover-galeria">
-                <img src="img/flecha.png" alt="">
-                <p>Camisetas Local</p>
-              </div>
-            </div>
-            <div class="imagen-camisetas">
-              <img src="img/Visita.jpeg" alt="">
-              <div class="hover-galeria">
-                <img src="img/flecha.png" alt="">
-                <p>Camisetas Visita</p>
-              </div>
-            </div>
-            <div class="imagen-camisetas">
-              <img src="img/Arquero.jpeg" alt="">
-              <div class="hover-galeria">
-                <img src="img/flecha.png" alt="">
-                <p>Camisetas Arquero</p>
-              </div>
-            </div>
-            <div class="imagen-camisetas">
-              <img src="img/Especial.jpeg" alt="">
-              <div class="hover-galeria">
-                <img src="img/flecha.png" alt="">
-                <p>Camisetas Especiales</p>
-              </div>
-            </div>  
-          </div>
-       </div>
-    </section> 
+    
+<section id="camisetas">
+  <div class="contenedor">
+     <h2 class="titulo">Camisetas</h2>
+    <div  class="categorias">
+      <div class="carta">
+        <h3>Camisetas Local</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit voluptates sit porro, explicabo minima corrupti enim ipsa totam voluptas culpa? Ad sequi sint, rem non aperiam fugit quod corporis iure.</p>
+        <form action="http://127.0.0.1:5500/index2.html">
+          <button>Ir</button>
+        </form>
+      </div> 
+      <div class="carta">
+        <h3>Camisetas Visita</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit voluptates sit porro, explicabo minima corrupti enim ipsa totam voluptas culpa? Ad sequi sint, rem non aperiam fugit quod corporis iure.</p>
+        <button>Ir</button>
+      </div> 
+      <div class="carta">
+        <h3>Camisetas Arqueros</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit voluptates sit porro, explicabo minima corrupti enim ipsa totam voluptas culpa? Ad sequi sint, rem non aperiam fugit quod corporis iure.</p>
+        <button>Ir</button>
+      </div>
+      <div class="carta">
+        <h3>Camisetas Especiales</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit voluptates sit porro, explicabo minima corrupti enim ipsa totam voluptas culpa? Ad sequi sint, rem non aperiam fugit quod corporis iure.</p>
+        <button>Ir</button>
+      </div>
+    </div>
+  </div> 
+</section>
+    
     <section class="creador contenedor">
-      <h2 class="titulo">Creador</h2> 
       <div class="cards">
         <div class="card">
           <img src="img/Diego.jpg" alt=""> 
           <div clas="contenido-texto-card">
            <h4>Diego Torres</h4> 
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, repellat!</p> 
+           <p2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, repellat!</p2> 
           </div> 
         </div>
       </div>
@@ -85,8 +81,7 @@
 </html>
    
    
-   
-   
+
    
    
    
