--- a/index1.html
+++ b/index1.html
@@ -14,9 +14,10 @@
 <body>
   <header>
       <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Camisetas</a>
-        <a href="#">Contacto</a>
+        <a href="index0.html">Inicio</a>
+        <a href="index6.html">fotografia</a>
+        <a href="index1.html">MQUC</a>
+        <a href="https://www.instagram.com/masqueunacoleccion_udechile/">Contacto</a>
       </nav>
       <section class="textos-header">
         <h1>Más que una colección</h1>    
@@ -40,25 +41,31 @@
     <div  class="categorias">
       <div class="carta">
         <h3>Camisetas Local</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit voluptates sit porro, explicabo minima corrupti enim ipsa totam voluptas culpa? Ad sequi sint, rem non aperiam fugit quod corporis iure.</p>
-        <form action="http://127.0.0.1:5500/index2.html">
+        <p>Lorem ipsum dolor si</p>
+        <form action="index2.html">
           <button>Ir</button>
         </form>
       </div> 
       <div class="carta">
         <h3>Camisetas Visita</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit voluptates sit porro, explicabo minima corrupti enim ipsa totam voluptas culpa? Ad sequi sint, rem non aperiam fugit quod corporis iure.</p>
-        <button>Ir</button>
+        <p>Lorem ipsum dolor si</p>
+        <form action="index3.html">
+          <button>Ir</button>
+        </form>
       </div> 
       <div class="carta">
         <h3>Camisetas Arqueros</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit voluptates sit porro, explicabo minima corrupti enim ipsa totam voluptas culpa? Ad sequi sint, rem non aperiam fugit quod corporis iure.</p>
-        <button>Ir</button>
+        <p>Lorem ipsum dolor si</p>
+        <form action="index4.html">
+          <button>Ir</button>
+        </form>
       </div>
       <div class="carta">
         <h3>Camisetas Especiales</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit voluptates sit porro, explicabo minima corrupti enim ipsa totam voluptas culpa? Ad sequi sint, rem non aperiam fugit quod corporis iure.</p>
+        <p>Lorem ipsum dolor si</p>
+        <form action="index5.html">
         <button>Ir</button>
+        </form>
       </div>
     </div>
   </div> 
@@ -67,13 +74,12 @@
     <section class="creador contenedor">
       <div class="cards">
         <div class="card">
-          <img src="img/Diego.jpg" alt=""> 
-          <div clas="contenido-texto-card">
-           <h4>Diego Torres</h4> 
-           <p2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, repellat!</p2> 
-          </div> 
+            <img src="img/Diego.jpg" alt="">
+            <div class="contenido-texto-card">
+                <h4>Diego Torres</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, voluptas.</p>
+            </div>
         </div>
-      </div>
     </section>
 
   </main>
