--- a/index4.html
+++ b/index4.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camisetas Local</title>
+    <title>Camisetas Arquero</title>
     <link rel="shortcut icon" href="img/MQUC.PNG" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,134 +12,103 @@
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h2>Camisetas Local</h2>
+
+    <h2>Camisetas Arquero</h2>
     <span class="linea"></span>
     <section class="galeria">
         <a href="#image1">
-             <img src="img/1996.jpeg" alt="">
+             <img src="img/2012A.jpg" alt="">
         </a>
         <a href="#image2">
-             <img src="img/1998.jpeg" alt="">
+             <img src="img/2013A.JPG" alt="">
         </a>
         <a href="#image3">
-             <img src="img/2007.jpeg" alt="">
+             <img src="img/2014A.jpg" alt="">
         </a>
         <a href="#image4">
-             <img src="img/2008.jpeg" alt="">
+            <img src="img/2015A.jpg" alt="">
         </a>
         <a href="#image5">
-            <img src="img/2009.jpeg" alt="">
+             <img src="img/2016A.JPG" alt="">
         </a>
         <a href="#image6">
-            <img src="img/2010.JPG" alt="">
+            <img src="img/2017V2.JPG" alt="">
         </a>
         <a href="#image7">
-            <img src="img/2012.JPG" alt="">
+            <img src="img/2017V.JPG" alt="">
         </a>
         <a href="#image8">
-            <img src="img/2014.jpeg" alt="">
+            <img src="img/2020A.jpg" alt="">
         </a>
         <a href="#image9">
-            <img src="img/2016.JPG" alt="">
-        </a>
-        <a href="#image10">
-            <img src="img/2017.jpeg" alt="">
-        </a>
-        <a href="#image11">
-            <img src="img/2018.JPG" alt="">
-        </a>
-        <a href="#image12">
-            <img src="img/2021.JPG" alt="">
+            <img src="img/2022A.jpg" alt="">
         </a>
     </section>
 
-
     <article class="ligth-box" id="image1">
-        <a href="#image6" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/1996.jpeg" alt="">
+        <a href="#image12" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
+        <img src="img/2.JPG" alt="">
         <a href="#image2" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
         <a href="" class="close">X</a>
     </article>
+    
     <article class="ligth-box" id="image2">
         <a href="#image1" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/1998.jpeg" alt="">
+        <img src="img/2011V.JPG" alt="">
         <a href="#image3" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
         <a href="" class="close">X</a>
     </article>
 
     <article class="ligth-box" id="image3">
         <a href="#image2" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2007.jpeg" alt="">
+        <img src="img/2012V.JPG" alt="">
         <a href="#image4" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
         <a href="" class="close">X</a>
     </article>
 
     <article class="ligth-box" id="image4">
         <a href="#image3" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2008.jpeg" alt="">
+        <img src="img/2015V.JPG" alt="">
         <a href="#image5" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
         <a href="" class="close">X</a>
     </article>
 
     <article class="ligth-box" id="image5">
         <a href="#image4" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2009.jpeg" alt="">
+        <img src="img/2016V.JPG" alt="">
         <a href="#image6" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
         <a href="" class="close">X</a>
     </article>
 
     <article class="ligth-box" id="image6">
         <a href="#image5" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2010.JPG" alt="">
+        <img src="img/2017V.JPG" alt="">
         <a href="#image7" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
         <a href="" class="close">X</a>
     </article>
 
     <article class="ligth-box" id="image7">
         <a href="#image6" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2012.JPG" alt="">
+        <img src="img/2017V2.JPG" alt="">
         <a href="#image8" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
         <a href="" class="close">X</a>
     </article>
 
     <article class="ligth-box" id="image8">
         <a href="#image7" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2014.jpeg" alt="">
+        <img src="img/2018V.jpg" alt="">
         <a href="#image9" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
         <a href="" class="close">X</a>
     </article>
 
     <article class="ligth-box" id="image9">
-        <a href="#imag8" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2016.JPG" alt="">
+        <a href="#image8" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
+        <img src="img/2019V.JPG" alt="">
         <a href="#image10" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
         <a href="" class="close">X</a>
     </article>
 
-    <article class="ligth-box" id="image10">
-        <a href="#image9" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2017.jpeg" alt="">
-        <a href="#image11" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-    <article class="ligth-box" id="image11">
-        <a href="#image10" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2018.JPG" alt="">
-        <a href="#image12" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-    <article class="ligth-box" id="image12">
-        <a href="#image11" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2021.JPG" alt="">
-        <a href="#image1" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-  
-
     <script src="https://kit.fontawesome.com/a3169ab64b.js" crossorigin="anonymous"></script>
-
+    
 </body>
 </html>
