--- a/index0.html
+++ b/index0.html
@@ -47,7 +47,7 @@
         </form>
       </div> 
       <div class="carta">
-        <h3>Mas que una coleccion</h3>
+        <h3>Camisetas</h3>
         <p>Lorem ipsum dolor si</p>
         <form action="index1.html">
           <button>Ir</button>
