--- a/index1.html
+++ b/index1.html
@@ -41,7 +41,7 @@
     <div  class="categorias">
       <div class="carta">
         <h3>Camisetas Local</h3>
-        <p>Lorem ipsum dolor si</p>
+        <p>Lorem, ipsum dolor sit </p>
         <form action="index2.html">
           <button>Ir</button>
         </form>
