Nuevos cambios en html y estilos
creacion y ajustes visuales de html

--- a/index0.html
+++ b/index0.html
@@ -12,15 +12,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
+  <header class="fondo-distinto">
       <nav>
         <a href="index0.html">Inicio</a>
-        <a href="index6.html">fotografia</a>
+        <a href="index6.html">fotografía</a>
         <a href="index1.html">MQUC</a>
         <a href="https://www.instagram.com/diwg.0/">Contacto</a>
       </nav>
       <section class="textos-header">
-        <h1>Bitacora personal</h1>    
+        <h1>Bitácora personal</h1>    
         <h2>Diego Torres</h2>
       </section>
       <div Class="wave" style=height:150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.20,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div> 
@@ -35,18 +35,18 @@
      </div>
     </section>
     
-<section id="camisetas">
+<section id="tipo">
   <div class="contenedor">
      <h2 class="titulo">Categorias</h2>
     <div  class="categorias">
-      <div class="carta">
+      <div class="foto-fondo">
         <h3>fotografia</h3>
         <p>Lorem ipsum dolor si</p>
         <form action="index6.html">
           <button>Ir</button>
         </form>
       </div> 
-      <div class="carta">
+      <div class="foto-fondo4">
         <h3>Camisetas</h3>
         <p>Lorem ipsum dolor si</p>
         <form action="index1.html">
@@ -57,16 +57,6 @@
   </div> 
 </section>
     
-    <section class="creador contenedor">
-      <div class="cards">
-        <div class="card">
-            <img src="img/Diego.jpg" alt="">
-            <div class="contenido-texto-card">
-                <h4>Diego Torres</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, voluptas.</p>
-            </div>
-        </div>
-    </section>
 
   </main>
 </body>
