--- a/index1.html
+++ b/index1.html
@@ -15,13 +15,13 @@
   <header>
       <nav>
         <a href="index0.html">Inicio</a>
-        <a href="index6.html">fotografia</a>
+        <a href="index6.html">fotografía</a>
         <a href="index1.html">MQUC</a>
         <a href="https://www.instagram.com/masqueunacoleccion_udechile/">Contacto</a>
       </nav>
       <section class="textos-header">
         <h1>Más que una colección</h1>    
-        <h2>Club Universidad de Chile</h2>
+        <h2>Diego Torres</h2>
       </section>
       <div Class="wave" style=height:150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.20,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div> 
   </header>
@@ -70,17 +70,7 @@
     </div>
   </div> 
 </section>
-    
-    <section class="creador contenedor">
-      <div class="cards">
-        <div class="card">
-            <img src="img/Diego.jpg" alt="">
-            <div class="contenido-texto-card">
-                <h4>Diego Torres</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, voluptas.</p>
-            </div>
-        </div>
-    </section>
+ 
 
   </main>
 </body>
