--- a/index0.html
+++ b/index0.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Más que una colección</title>
-  <link rel="shortcut icon" href="img/MQUC.PNG" type="image/x-icon">
+  <title>Bítacora personal Diego Torres</title>
+  <link rel="shortcut icon" href="img/Fondodiego.JPG" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,15 +40,15 @@
      <h2 class="titulo">Categorias</h2>
     <div  class="categorias">
       <div class="foto-fondo">
-        <h3>fotografia</h3>
-        <p>Lorem ipsum dolor si</p>
+        <h3>Fotografía</h3>
+        <p>Aquí encontraras parte de mis fotografias</p>
         <form action="index6.html">
           <button>Ir</button>
         </form>
       </div> 
       <div class="foto-fondo4">
         <h3>Camisetas</h3>
-        <p>Lorem ipsum dolor si</p>
+        <p>Aquí encontraras parte de mi colección</p>
         <form action="index1.html">
           <button>Ir</button>
         </form>
@@ -56,8 +56,12 @@
     </div>
   </div> 
 </section>
-    
-
+    </main>
   </main>
+  <footer>
+    <h2 class= "titulo-final">&copy; Diego Torres</h2>
+  </footer>
 </body>
+
+</html>
 </html>
