--- a/index1.html
+++ b/index1.html
@@ -29,7 +29,7 @@
     <section class="contenedor Sobre-nosotros" >
      <div class="contenedor-sobre-nosotros"> 
        <div class="contenido-textos">
-         <h2 class="titulo">De que trata</h2>
+         <h2 class="titulo" >De que trata</h2>
          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla iusto facere nobis magnam nisi, voluptatem impedit et, repellat deleniti corporis dolores recusandae numquam modi atque assumenda accusamus, laudantium molestiae repellendus.</p>
        </div>
      </div>
@@ -40,29 +40,29 @@
      <h2 class="titulo">Camisetas</h2>
     <div  class="categorias">
       <div class="carta">
-        <h3>Camisetas Local</h3>
-        <p>Lorem, ipsum dolor sit </p>
+        <h3>Camisetas local</h3>
+        <p>Aquí encontraras algunas camisetas local desde 1996 hasta 2021</p>
         <form action="index2.html">
           <button>Ir</button>
         </form>
       </div> 
       <div class="carta">
-        <h3>Camisetas Visita</h3>
-        <p>Lorem ipsum dolor si</p>
+        <h3>Camisetas visita</h3>
+        <p>Aquí encontraras algunas camisetas visita desde 2007 hasta 2022</p>
         <form action="index3.html">
           <button>Ir</button>
         </form>
       </div> 
       <div class="carta">
-        <h3>Camisetas Arqueros</h3>
-        <p>Lorem ipsum dolor si</p>
+        <h3>Camisetas arqueros</h3>
+        <p>Aquí encontraras algunas camisetas de Arquero desde 2012 hasta 2022</p>
         <form action="index4.html">
           <button>Ir</button>
         </form>
       </div>
       <div class="carta">
-        <h3>Camisetas Especiales</h3>
-        <p>Lorem ipsum dolor si</p>
+        <h3>Camisetas especiales</h3>
+        <p>Aquí encontraras algunas camisetas especiales desde 2009 hasta 2022</p>
         <form action="index5.html">
         <button>Ir</button>
         </form>
@@ -73,6 +73,9 @@
  
 
   </main>
+  <footer>
+    <h2 class= "titulo-final">&copy; Diego Torres</h2>
+  </footer>
 </body>
 </html>
    
