--- a/index4.html
+++ b/index4.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camisetas Arquero</title>
+    <title>Camisetas arquero</title>
     <link rel="shortcut icon" href="img/MQUC.PNG" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,102 +14,85 @@
 </head>
 <body>
 
-    <h2>Camisetas Arquero</h2>
-    <span class="linea"></span>
-    <section class="galeria">
-        <a href="#image1">
-             <img src="img/2012A.jpg" alt="">
-        </a>
-        <a href="#image2">
-             <img src="img/2013A.JPG" alt="">
-        </a>
-        <a href="#image3">
-             <img src="img/2014A.jpg" alt="">
-        </a>
-        <a href="#image4">
-            <img src="img/2015A.jpg" alt="">
-        </a>
-        <a href="#image5">
-             <img src="img/2016A.JPG" alt="">
-        </a>
-        <a href="#image6">
-            <img src="img/2017V2.JPG" alt="">
-        </a>
-        <a href="#image7">
-            <img src="img/2017V.JPG" alt="">
-        </a>
-        <a href="#image8">
-            <img src="img/2020A.jpg" alt="">
-        </a>
-        <a href="#image9">
-            <img src="img/2022A.jpg" alt="">
-        </a>
-    </section>
-
-    <article class="ligth-box" id="image1">
-        <a href="#image12" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2.JPG" alt="">
-        <a href="#image2" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
+    <header>
+        <nav>
+          <a href="index0.html">Inicio</a>
+          <a href="index6.html">fotografía</a>
+          <a href="index1.html">MQUC</a>
+          <a href="https://www.instagram.com/masqueunacoleccion_udechile/">Contacto</a>
+        </nav>
+        <section class="textos-header">
+          <h1>Camisetas arquero</h1>    
+          <h2>Más que una colección</h2>
+        </section>
+        <div Class="wave" style=height:150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.20,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div> 
+    </header>
     
-    <article class="ligth-box" id="image2">
-        <a href="#image1" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2011V.JPG" alt="">
-        <a href="#image3" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-    <article class="ligth-box" id="image3">
-        <a href="#image2" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2012V.JPG" alt="">
-        <a href="#image4" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-    <article class="ligth-box" id="image4">
-        <a href="#image3" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2015V.JPG" alt="">
-        <a href="#image5" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-    <article class="ligth-box" id="image5">
-        <a href="#image4" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2016V.JPG" alt="">
-        <a href="#image6" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-    <article class="ligth-box" id="image6">
-        <a href="#image5" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2017V.JPG" alt="">
-        <a href="#image7" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-    <article class="ligth-box" id="image7">
-        <a href="#image6" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2017V2.JPG" alt="">
-        <a href="#image8" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-    <article class="ligth-box" id="image8">
-        <a href="#image7" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2018V.jpg" alt="">
-        <a href="#image9" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-    <article class="ligth-box" id="image9">
-        <a href="#image8" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2019V.JPG" alt="">
-        <a href="#image10" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-    <script src="https://kit.fontawesome.com/a3169ab64b.js" crossorigin="anonymous"></script>
+    <div class="galeria">
+        <div class="contenedor-imagenes">
+            <div class="imagen">
+                <img src="img/2012A.jpg" alt="">
+                <div class="overlay">
+                    <h2>2012</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2013A.JPG" alt="">
+                <div class="overlay">
+                    <h2>2013</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2014A.jpg" alt="">
+                <div class="overlay">
+                    <h2>2014</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2015A.jpg" alt="">
+                <div class="overlay">
+                    <h2>2015</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2016A.JPG" alt="">
+                <div class="overlay">
+                    <h2>2016</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2016A2.jpeg" alt="">
+                <div class="overlay">
+                    <h2>2016</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2019A.jpeg" alt="">
+                <div class="overlay">
+                    <h2>2019</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2020A.JPG" alt="">
+                <div class="overlay">
+                    <h2>2020</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2022A.jpg" alt="">
+                <div class="overlay">
+                    <h2>2022</h2>
+                </div>
+            </div>
+            <!-- <div class="imagen">
+                <img src="img/1 (2).jpg" alt="">
+            </div> -->
+        </div>
+    </div>
+    <footer class="fo2">
+        <h2 class= "titulo-final2">&copy; Diego Torres</h2>
+      </footer>
+    </body>
     
-</body>
+
 </html>
