--- a/index7.html
+++ b/index7.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camisetas especiales</title>
-    <link rel="shortcut icon" href="img/MQUC.PNG" type="image/x-icon">
+    <title>Blanco y negro fotografía</title>
+    <link rel="shortcut icon" href="img/fondofotos.JPG" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,16 +14,16 @@
 </head>
 <body>
 
-    <header>
+    <header class="fondo-distinto2">
         <nav>
           <a href="index0.html">Inicio</a>
           <a href="index6.html">fotografía</a>
           <a href="index1.html">MQUC</a>
-          <a href="https://www.instagram.com/masqueunacoleccion_udechile/">Contacto</a>
+          <a href="https://www.instagram.com/diwg.0/">Contacto</a>
         </nav>
         <section class="textos-header">
-          <h1>Camisetas especiales</h1>    
-          <h2>Más que una colección</h2>
+          <h1>Blanco y negro</h1>    
+          <h2>Fotografía</h2>
         </section>
         <div Class="wave" style=height:150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.20,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div> 
     </header>
@@ -31,48 +31,27 @@
     <div class="galeria">
         <div class="contenedor-imagenes">
             <div class="imagen">
-                <img src="img/2009E.jpeg" alt="">
-                <div class="overlay">
-                    <h2>Retro 80's 2009</h2>
-                </div>
+                <img src="img/pajaro.jpg" alt="">
             </div>
             <div class="imagen">
-                <img src="img/2019E.jpeg" alt="">
-                <div class="overlay">
-                    <h2>70 años Adidas 2019</h2>
-                </div>
+                <img src="img/playa.JPG" alt="">
             </div>
             <div class="imagen">
-                <img src="img/2020E.jpeg" alt="">
-                <div class="overlay">
-                    <h2>Luto Carlos Campos 2020</h2>
-                </div>
+                <img src="img/abuelo.JPG" alt="">
             </div>
             <div class="imagen">
-                <img src="img/2021E.jpeg" alt="">
-                <div class="overlay">
-                    <h2>!0° Aniversario Copa Sudamericana 2021</h2>
-                </div>
+                <img src="img/auto.jpg" alt="">
             </div>
             <div class="imagen">
-                <img src="img/2022E.jpeg" alt="">
-                <div class="overlay">
-                    <h2>Pre Temporada 2022</h2>
-                </div>
+                <img src="img/avion.JPG" alt="">
+               
             </div>
             <div class="imagen">
-                <img src="img/2022E2.jpeg" alt="">
-                <div class="overlay">
-                    <h2>Luto Leonel Sánchez 2022</h2>
-                </div>
+                <img src="img/concierto.jpg" alt="">
             </div>
-            <!-- <div class="imagen">
-                <img src="img/1 (2).jpg" alt="">
-            </div> -->
-        </div>
     </div>
-    <footer class="fo2">
-        <h2 class= "titulo-final2">&copy; Diego Torres</h2>
+    <footer class="fo3">
+        <h2 class= "titulo-final3">&copy; Diego Torres</h2>
       </footer>
     </body>
     
