--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camisetas Local</title>
+    <title>Camisetas local</title>
     <link rel="shortcut icon" href="img/MQUC.PNG" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,134 +12,143 @@
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h2>Camisetas Local</h2>
-    <span class="linea"></span>
-    <section class="galeria">
-        <a href="#image1">
-             <img src="img/1996.jpeg" alt="">
-        </a>
-        <a href="#image2">
-             <img src="img/1998.jpeg" alt="">
-        </a>
-        <a href="#image3">
-             <img src="img/2007.jpeg" alt="">
-        </a>
-        <a href="#image4">
-             <img src="img/2008.jpeg" alt="">
-        </a>
-        <a href="#image5">
-            <img src="img/2009.jpeg" alt="">
-        </a>
-        <a href="#image6">
-            <img src="img/2010.JPG" alt="">
-        </a>
-        <a href="#image7">
-            <img src="img/2012.JPG" alt="">
-        </a>
-        <a href="#image8">
-            <img src="img/2014.jpeg" alt="">
-        </a>
-        <a href="#image9">
-            <img src="img/2016.JPG" alt="">
-        </a>
-        <a href="#image10">
-            <img src="img/2017.jpeg" alt="">
-        </a>
-        <a href="#image11">
-            <img src="img/2018.JPG" alt="">
-        </a>
-        <a href="#image12">
-            <img src="img/2021.JPG" alt="">
-        </a>
-    </section>
 
+    <header>
+        <nav>
+          <a href="index0.html">Inicio</a>
+          <a href="index6.html">fotografía</a>
+          <a href="index1.html">MQUC</a>
+          <a href="https://www.instagram.com/masqueunacoleccion_udechile/">Contacto</a>
+        </nav>
+        <section class="textos-header">
+          <h1>Camisetas local</h1>    
+          <h2>Más que una colección</h2>
+        </section>
+        <div Class="wave" style=height:150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.20,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div> 
+    </header>
+    
+    <div class="galeria">
+        <div class="contenedor-imagenes">
+            <div class="imagen">
+                <img src="img/1996.jpeg" alt="">
+                <div class="overlay">
+                    <h2>1996</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/1998.jpeg" alt="">
+                <div class="overlay">
+                    <h2>1998</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2005.JPG" alt="">
+                <div class="overlay">
+                    <h2>2005</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2007.jpeg" alt="">
+                <div class="overlay">
+                    <h2>2007</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2008.jpeg" alt="">
+                <div class="overlay">
+                    <h2>2008</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2009.jpeg" alt="">
+                <div class="overlay">
+                    <h2>2009</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2010.JPG" alt="">
+                <div class="overlay">
+                    <h2>2010</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2011.jpeg" alt="">
+                <div class="overlay">
+                    <h2>2010</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2012.JPG" alt="">
+                <div class="overlay">
+                    <h2>2012</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2014.jpeg" alt="">
+                <div class="overlay">
+                    <h2>2014</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2015.JPG" alt="">
+                <div class="overlay">
+                    <h2>2015</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2016.JPG" alt="">
+                <div class="overlay">
+                    <h2>2016</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2017.jpeg" alt="">
+                <div class="overlay">
+                    <h2>2017</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2018.JPG" alt="">
+                <div class="overlay">
+                    <h2>2018</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2019.jpg" alt="">
+                <div class="overlay">
+                    <h2>2019</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2020.jpeg" alt="">
+                <div class="overlay">
+                    <h2>2020</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2021.JPG" alt="">
+                <div class="overlay">
+                    <h2>2021</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2022E3.jpeg" alt="">
+                <div class="overlay">
+                    <h2>2022 / 95 años </h2>
+                </div>
+            </div>
+            
+            <!-- <div class="imagen">
+                <img src="img/1 (2).jpg" alt="">
+            </div> -->
+        </div>
+    </div>
 
-    <article class="ligth-box" id="image1">
-        <a href="#image6" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/1996.jpeg" alt="">
-        <a href="#image2" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-    <article class="ligth-box" id="image2">
-        <a href="#image1" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/1998.jpeg" alt="">
-        <a href="#image3" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-    <article class="ligth-box" id="image3">
-        <a href="#image2" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2007.jpeg" alt="">
-        <a href="#image4" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-    <article class="ligth-box" id="image4">
-        <a href="#image3" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2008.jpeg" alt="">
-        <a href="#image5" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-    <article class="ligth-box" id="image5">
-        <a href="#image4" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2009.jpeg" alt="">
-        <a href="#image6" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-    <article class="ligth-box" id="image6">
-        <a href="#image5" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2010.JPG" alt="">
-        <a href="#image7" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-    <article class="ligth-box" id="image7">
-        <a href="#image6" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2012.JPG" alt="">
-        <a href="#image8" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-    <article class="ligth-box" id="image8">
-        <a href="#image7" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2014.jpeg" alt="">
-        <a href="#image9" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-    <article class="ligth-box" id="image9">
-        <a href="#imag8" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2016.JPG" alt="">
-        <a href="#image10" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-    <article class="ligth-box" id="image10">
-        <a href="#image9" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2017.jpeg" alt="">
-        <a href="#image11" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-    <article class="ligth-box" id="image11">
-        <a href="#image10" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2018.JPG" alt="">
-        <a href="#image12" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-    <article class="ligth-box" id="image12">
-        <a href="#image11" class="next"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-        <img src="img/2021.JPG" alt="">
-        <a href="#image1" class="next"><i class="fa-sharp fa-solid fa-arrow-right"></i></a>
-        <a href="" class="close">X</a>
-    </article>
-
-  
-
-    <script src="https://kit.fontawesome.com/a3169ab64b.js" crossorigin="anonymous"></script>
-
+    <footer class="fo2">
+    <h2 class= "titulo-final2">&copy; Diego Torres</h2>
+  </footer>
 </body>
+
+
+
 </html>
