--- a/index6.html
+++ b/index6.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Más que una colección</title>
-  <link rel="shortcut icon" href="img/MQUC.PNG" type="image/x-icon">
+  <title>Fotografía Diego Torres</title>
+  <link rel="shortcut icon" href="img/fondofotos.JPG" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,15 +41,15 @@
     <div  class="categorias">
       <div class="foto-fondo2">
         <h3>Blanco y negro</h3>
-        <p>Lorem ipsum dolor si</p>
-        <form action="index6.html">
+        <p>Aquí encontraras algunas de mis fotografias en blanco y negro</p>
+        <form action="index7.html">
           <button>Ir</button>
         </form>
       </div> 
       <div class="foto-fondo3">
         <h3>Color</h3>
-        <p>Lorem ipsum dolor si</p>
-        <form action="index1.html">
+        <p>Aquí encontraras algunas de mis fotografias a color</p>
+        <form action="index8.html">
           <button>Ir</button>
         </form>
       </div> 
@@ -59,5 +59,9 @@
     
 
   </main>
+  <footer class="fo3">
+    <h2 class= "titulo-final">&copy; Diego Torres</h2>
+  </footer>
 </body>
+
 </html>
