--- a/index1.html
+++ b/index1.html
@@ -29,8 +29,28 @@
     <section class="contenedor Sobre-nosotros" >
      <div class="contenedor-sobre-nosotros"> 
        <div class="contenido-textos">
-         <h2 class="titulo" >De que trata</h2>
-         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla iusto facere nobis magnam nisi, voluptatem impedit et, repellat deleniti corporis dolores recusandae numquam modi atque assumenda accusamus, laudantium molestiae repellendus.</p>
+         <h2 class="titulo" >De qué trata</h2>
+         <p>Toda mi vida he sido hincha del Club Universidad de Chile, a los 3 años me regalaron la primera camiseta y siempre me llamaron la atención los detalles, colores y modelos presentados.
+          <br>
+          <br>
+          Considero que las camisetas son más que una prenda de vestir, pueden trasmitir historias y recuerdos.
+          <br>
+          <br>
+          En 2016 comencé a adquirir camisetas de forma más seguida y comencé con la coleccíon. 
+          <br>
+          <br>
+          Actualmente la colección cuenta con aproxiamdamente 50 camisetas, donde se puende encontarar desde el año 1996 hasta la actualidad.
+          <br>
+          <br>
+          En 2020 abrí un instagram dedicado a la coleción, llamado "Más que una colección" el cual me permite compartir y conocer más sobre el coleccionismo de camisetas, a nivel nacional e internacional.
+          <br>
+          <br>
+          En las siguientes galerías se encuentran todas las camisetas de la colección, dividas por categorías y en orden cronológico.
+          <br>
+          <br>
+
+
+         </p>
        </div>
      </div>
     </section>
