--- a/index2.html
+++ b/index2.html
@@ -42,6 +42,12 @@
                 </div>
             </div>
             <div class="imagen">
+                <img src="img/2001-02.jpg" alt="">
+                <div class="overlay">
+                    <h2>2001-02</h2>
+                </div>
+            </div>
+            <div class="imagen">
                 <img src="img/2005.JPG" alt="">
                 <div class="overlay">
                     <h2>2005</h2>
@@ -72,9 +78,15 @@
                 </div>
             </div>
             <div class="imagen">
+                <img src="img/2011L.jpg" alt="">
+                <div class="overlay">
+                    <h2>2011 Apertura</h2>
+                </div>
+            </div>
+            <div class="imagen">
                 <img src="img/2011.jpeg" alt="">
                 <div class="overlay">
-                    <h2>2010</h2>
+                    <h2>2011 Clausura</h2>
                 </div>
             </div>
             <div class="imagen">
@@ -83,12 +95,19 @@
                     <h2>2012</h2>
                 </div>
             </div>
+             <div class="imagen">
+                <img src="img/2013.jpg" alt="">
+                <div class="overlay">
+                    <h2>2013</h2>
+                </div>
+            </div>
             <div class="imagen">
                 <img src="img/2014.jpeg" alt="">
                 <div class="overlay">
                     <h2>2014</h2>
                 </div>
             </div>
+           
             <div class="imagen">
                 <img src="img/2015.JPG" alt="">
                 <div class="overlay">
