--- a/index5.html
+++ b/index5.html
@@ -29,7 +29,7 @@
     </header>
     
     <div class="galeria">
-        <div class="contenedor-imagenes">
+        <div class="contenedor-imagenes">      
             <div class="imagen">
                 <img src="img/2009E.jpeg" alt="">
                 <div class="overlay">
@@ -37,9 +37,33 @@
                 </div>
             </div>
             <div class="imagen">
+                <img src="img/Ballet.jpg" alt="">
+                <div class="overlay">
+                    <h2>Conmemorativa Ballet Azul 2016</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2017E.jpg" alt="">
+                <div class="overlay">
+                    <h2>90 años 2017</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2018E.jpg" alt="">
+                <div class="overlay">
+                    <h2>Retro 80's 2018</h2>
+                </div>
+            </div>
+            <div class="imagen">
+                <img src="img/2018E2.jpg" alt="">
+                <div class="overlay">
+                    <h2>Día mundial sin auto 2018</h2>
+                </div>
+            </div>
+            <div class="imagen">
                 <img src="img/2019E.jpeg" alt="">
                 <div class="overlay">
-                    <h2>70 años Adidas 2019</h2>
+                    <h2>/0 años Adidas 2019</h2>
                 </div>
             </div>
             <div class="imagen">
@@ -51,7 +75,7 @@
             <div class="imagen">
                 <img src="img/2021E.jpeg" alt="">
                 <div class="overlay">
-                    <h2>!0° Aniversario Copa Sudamericana 2021</h2>
+                    <h2>10° Aniversario Copa Sudamericana 2021</h2>
                 </div>
             </div>
             <div class="imagen">
