--- a/index6.html
+++ b/index6.html
@@ -29,8 +29,22 @@
     <section class="contenedor Sobre-nosotros" >
      <div class="contenedor-sobre-nosotros"> 
        <div class="contenido-textos">
-         <h2 class="titulo">De que trata</h2>
-         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla iusto facere nobis magnam nisi, voluptatem impedit et, repellat deleniti corporis dolores recusandae numquam modi atque assumenda accusamus, laudantium molestiae repellendus.</p>
+         <h2 class="titulo">De qué trata</h2>
+         <p>
+          Desde temprana edad he tenido un interes por la fotografía, a los 12 años tuve mi primera cámara y desde ahí he experimentado con la fotografía.
+          <br>
+          <br>
+          Mi tipo de fotografía se ve influenciada por el lugar donde crecí, es por esto que mi preferencias para fotografiar son entornos naturales y exteriores donde pueda encontrar una estética de mi agrado.
+          <br>
+          <br>
+          En temas de edicción me inclino por las características que entrega una foto análoga, tonos oscuros y ruido. 
+          <br>
+          <br>
+          Para mi la fotografía es una forma de expresar estados de ánimos y permite entregar una visión propia del enterno.
+          <br>
+          <br>
+          En esta sección de la bítacora se expone parte de las fotografias. 
+         </p>
        </div>
      </div>
     </section>
