--- a/index0.html
+++ b/index0.html
@@ -29,15 +29,22 @@
     <section class="contenedor Sobre-nosotros" >
      <div class="contenedor-sobre-nosotros"> 
        <div class="contenido-textos">
-         <h2 class="titulo">De que trata</h2>
-         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla iusto facere nobis magnam nisi, voluptatem impedit et, repellat deleniti corporis dolores recusandae numquam modi atque assumenda accusamus, laudantium molestiae repellendus.</p>
+         <h2 class="titulo">De qué trata</h2>
+         <p>Mi nombre es Diego Torres, estudiante de diseño de la Pontificia Universidad Católica de Valparaíso.
+         <br>
+         <br>
+         Esta bítacora está dedicada y expone parte de mis hobbies, a los cuales le he didacado gran parte de mi tiempo en los últimos años.
+         <br>
+         <br>
+         La bítacora se divide en dos categorias: Fotografía y colección de camisetas.
+         </p>
        </div>
      </div>
     </section>
     
 <section id="tipo">
   <div class="contenedor">
-     <h2 class="titulo">Categorias</h2>
+     <h2 class="titulo">Categorías</h2>
     <div  class="categorias">
       <div class="foto-fondo">
         <h3>Fotografía</h3>
