--- a/index3.html
+++ b/index3.html
@@ -22,7 +22,7 @@
           <a href="https://www.instagram.com/masqueunacoleccion_udechile/">Contacto</a>
         </nav>
         <section class="textos-header">
-          <h1>Camisetas vsita</h1>    
+          <h1>Camisetas visita</h1>    
           <h2>Más que una colección</h2>
         </section>
         <div Class="wave" style=height:150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.20,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div> 
@@ -30,6 +30,12 @@
     
     <div class="galeria">
         <div class="contenedor-imagenes">
+            <div class="imagen">
+                <img src="img/2007V.jpg" alt="">
+                <div class="overlay">
+                    <h2>2007</h2>
+                </div>
+            </div>
             <div class="imagen">
                 <img src="img/2009V.JPG" alt="">
                 <div class="overlay">
@@ -49,9 +55,15 @@
                 </div>
             </div>
             <div class="imagen">
+                <img src="img/2014V.jpg" alt="">
+                <div class="overlay">
+                    <h2>2014</h2>
+                </div>
+            </div>
+            <div class="imagen">
                 <img src="img/2015V.JPG" alt="">
                 <div class="overlay">
-                    <h2>2016</h2>
+                    <h2>2015</h2>
                 </div>
             </div>
             <div class="imagen">
